force-app/main/default/objects/Tabla_de_precios__c/Tabla_de_precios__c.object-meta.xml
<CustomObject>
    <label>Tabla de precios</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla de precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>