force-app/main/default/objects/Tabla_de_precios__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lithium Carbonate</fullName>
            </value>
            <value>
                <fullName>Lithium hydroxide</fullName>
            </value>
            <value>
                <fullName>Iodine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>