force-app/main/default/objects/Tabla_de_precios__c/fields/Product_use__c.field-meta.xml
<CustomField>
    <fullName>Product_use__c</fullName>
    <label>Product use</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECHNICAL</fullName>
            </value>
            <value>
                <fullName>BATTERY</fullName>
            </value>
            <value>
                <fullName>LHI/LHI-W/LHI-R</fullName>
            </value>
            <value>
                <fullName>LHT/LHT-O</fullName>
            </value>
            <value>
                <fullName>LHT-B</fullName>
            </value>
            <value>
                <fullName>Iodophors</fullName>
            </value>
            <value>
                <fullName>Biocides</fullName>
            </value>
            <value>
                <fullName>X-Ray</fullName>
            </value>
            <value>
                <fullName>I2 derivatives</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
                <isActive>false</isActive>
                <label>CN</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <isActive>false</isActive>
                <label>IN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>