force-app/main/default/objects/Tabla_de_precios__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt; 7.000</fullName>
            </value>
            <value>
                <fullName>4.000 - 7.000</fullName>
            </value>
            <value>
                <fullName>2.000 - 4.000</fullName>
            </value>
            <value>
                <fullName>1.000 - 2.000</fullName>
            </value>
            <value>
                <fullName>&gt; 1.500</fullName>
            </value>
            <value>
                <fullName>1.000-1.500</fullName>
            </value>
            <value>
                <fullName>300 - 1.000</fullName>
            </value>
            <value>
                <fullName>500 - 1.000</fullName>
            </value>
            <value>
                <fullName>300 - 500</fullName>
            </value>
            <value>
                <fullName>100 - 300</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>1 - 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>