force-app/main/default/objects/Tabla_de_precios__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION 1: NAFTA, EMEA, LATAM</fullName>
            </value>
            <value>
                <fullName>REGION 2: ASOC, JAPAN</fullName>
            </value>
            <value>
                <fullName>REGION 3: INDIA</fullName>
            </value>
            <value>
                <fullName>REGION 4: CHINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>