force-app/main/default/objects/Tabla_de_precios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Territory__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_use__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>