force-app/main/default/objects/Tabla_de_precios__c/listViews/Iodine_I2_derivatives.listView-meta.xml
<ListView>
    <fullName>Iodine_I2_derivatives</fullName>
    <columns>Quantity__c</columns>
    <columns>Product_use__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_use__c</field>
        <operation>equals</operation>
        <value>I2 derivatives</value>
    </filters>
    <label>Iodine I2 derivatives</label>
</ListView>