force-app/main/default/objects/Tabla_de_precios__c/listViews/Iodine_Iodophors.listView-meta.xml
<ListView>
    <fullName>Iodine_Iodophors</fullName>
    <columns>Quantity__c</columns>
    <columns>Product_use__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_use__c</field>
        <operation>equals</operation>
        <value>Iodophors</value>
    </filters>
    <label>Iodine Iodophors</label>
</ListView>