force-app/main/default/objects/Tabla_de_precios__c/listViews/Iodine_X_Ray.listView-meta.xml
<ListView>
    <fullName>Iodine_X_Ray</fullName>
    <columns>Quantity__c</columns>
    <columns>Product_use__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_use__c</field>
        <operation>equals</operation>
        <value>X-Ray</value>
    </filters>
    <label>Iodine X-Ray</label>
</ListView>