force-app/main/default/objects/Tabla_de_precios__c/listViews/REGION_1_Lithium_Carbonate_BATTERY.listView-meta.xml
<ListView>
    <fullName>REGION_1_Lithium_Carbonate_BATTERY</fullName>
    <columns>NAME</columns>
    <columns>Territory__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_use__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>&quot;REGION 1: NAFTA, EMEA, LATAM&quot;</value>
    </filters>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Lithium Carbonate</value>
    </filters>
    <filters>
        <field>Product_use__c</field>
        <operation>equals</operation>
        <value>BATTERY</value>
    </filters>
    <label>REGION 1/Lithium Carbonate/BATTERY</label>
</ListView>